Add Dedicated to mentions of "Serverless" where applicable

--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -96,7 +96,7 @@ Recommended for enterprise organizations that require full customization of thei
 
 ### Cloud supergraphs
 
-> Cloud supergraphs require an Apollo organization on the **Serverless (Free)** or **Serverless** plan. [Learn more about plans.](../org/plans/)
+> Cloud supergraphs require an Apollo organization on the **Serverless** (free or paid) or **Dedicated** plan. [Learn more about plans.](../org/plans/#current-plans)
 
 **Cloud supergraphs** are recommended for every organization that's getting started with GraphOS. For every variant of a cloud supergraph, GraphOS provisions and manages a **router** that acts as the variant's public endpoint. Application clients communicate with this endpoint instead of communicating directly with your GraphQL server(s):
 
