--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -47,7 +47,7 @@ The GraphOS platform provides an ever-growing collection of tools and services t
 
 ### Core features
 
-These features (along with many others) are available to organizations on an Apollo **Serverless** plan:
+These features (along with many others) are available to organizations on Apollo **Serverless** and **Dedicated** plans:
 
 > [See all Apollo plans.](https://www.apollographql.com/pricing/)
 
@@ -80,7 +80,7 @@ Additional GraphOS features are available to organizations on an **Enterprise** 
   - Set up single sign-on (SSO) with your identity provider.
   - Export [audit logs](./org/audit-log/) of all material events that occurred within your organization over a time period.
 - **Extended data retention.**
-  - Your supergraph's historical operation metrics are available for visualization in Studio significantly longer than with a **Serverless** plan.
+  - Your supergraph's historical operation metrics are available for visualization in Studio significantly longer than with a **Serverless** plan. See the pricing page's [section on data retention](https://www.apollographql.com/pricing#data-retention) for details.
 
 An Enterprise plan also provides access to our Graph Champions community and a dedicated support channel for your team to connect with Apollo supergraph experts. We'll work with you to customize a query volume limit and support package that's right for you.
 
