--- a/src/content/graphos/basics/routing/cloud.mdx
+++ b/src/content/graphos/basics/routing/cloud.mdx
@@ -3,7 +3,7 @@ title: Cloud routing for supergraphs
 description: In GraphOS
 ---
 
-> **Cloud supergraphs are available to organizations with new Apollo Serverless plans.** They are _not_ available to organizations with an Enterprise plan or a legacy Free or Team plan.
+> **Cloud supergraphs are available to organizations with Apollo Serverless and Dedicated plans.** They are _not_ available to organizations with an Enterprise plan or a legacy Free or Team plan.
 >
 > [See details about plans.](https://www.apollographql.com/pricing/)
 
