--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -87,7 +87,7 @@ You can't access a locked organization from GraphOS Studio, and GraphOS stops se
 
 If you have a non-Enterprise Apollo organization that was created before **4 October 2022**, it's on one of the following legacy plans.
 
-> These plans do _not_ support serverless cloud supergraphs, and they might not support other new GraphOS features moving forward.
+> These plans do _not_ support cloud supergraphs, and they might not support other new GraphOS features moving forward.
 >
 > If your organization is on one of these plans, we strongly recommend [upgrading to a current plan](#upgrading-to-a-current-plan).
 
