Callout serverless configuration options

--- a/src/content/graphos/basics/routing/cloud-configuration.mdx
+++ b/src/content/graphos/basics/routing/cloud-configuration.mdx
@@ -49,7 +49,11 @@ headers:
 
 ## Router configuration YAML
 
-You can configure certain aspects of your router's behavior in the **Router configuration YAML** section of the **Cloud Router** tab. Specifically, you can configure:
+You can configure your router's behavior in the **Router configuration YAML** section of the **Cloud Router** tab.
+
+[Dedicated and Enterprise plans](../org/plans/) offer a [wide variety of configurations](/router/configuration/overview#yaml-config-file).
+
+On the [Serverless plan](../org/plans/), you can configure:
 
 - [HTTP headers](#http-header-rules) that the router sends to your subgraphs
 - [CORS rules](#cors-settings) for browser-based applications connecting to the router
@@ -59,9 +63,7 @@ You can configure certain aspects of your router's behavior in the **Router conf
 
 After you make any changes to your YAML configuration, you must **save** those changes (`CMD+S` or `CTRL+S`) for those changes to take effect.
 
-> **If you require more advanced router customization,** please [reach out](https://www.apollographql.com/contact-sales/) about an Apollo [Enterprise plan](https://www.apollographql.com/pricing/).
->
-> Enterprise organizations run self-managed instances of the [Apollo Router](/router/) in their own infrastructure, enabling them to maximize router performance and fully customize its behavior.
+> **If you require more advanced router customization,** please [reach out](https://www.apollographql.com/contact-sales/) about Dedicated and Enterprise plans.
 
 ### HTTP header rules
 
