--- a/src/content/graphos/basics/routing/cloud-configuration.mdx
+++ b/src/content/graphos/basics/routing/cloud-configuration.mdx
@@ -51,9 +51,7 @@ headers:
 
 You can configure your router's behavior in the **Router configuration YAML** section of the **Cloud Router** tab.
 
-[Dedicated and Enterprise plans](../org/plans/) offer a [wide variety of configurations](/router/configuration/overview#yaml-config-file).
-
-On the [Serverless plan](../org/plans/), you can configure:
+[Dedicated and Enterprise plans](../org/plans/) offer a [wide variety of configurations](/router/configuration/overview#yaml-config-file). On the [Serverless plan](../org/plans/), you can configure:
 
 - [HTTP headers](#http-header-rules) that the router sends to your subgraphs
 - [CORS rules](#cors-settings) for browser-based applications connecting to the router
@@ -63,7 +61,11 @@ On the [Serverless plan](../org/plans/), you can configure:
 
 After you make any changes to your YAML configuration, you must **save** those changes (`CMD+S` or `CTRL+S`) for those changes to take effect.
 
-> **If you require more advanced router customization,** please [reach out](https://www.apollographql.com/contact-sales/) about Dedicated and Enterprise plans.
+<Tip>
+
+**If you require more advanced router customization,** please [reach out](https://www.apollographql.com/contact-sales/) to learn about your about Dedicated and Enterprise plan options.
+
+</Tip>
 
 ### HTTP header rules
 
@@ -103,7 +105,11 @@ You can specify which headers to propagate based on a matching [regex pattern](h
     matching: .*
 ```
 
-> **Note:** The router _never_ propagates so-called [hop-by-hop headers](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers#hop-by-hop_headers) (such as `Content-Length`) when propagating by pattern.
+<Note>
+
+The router _never_ propagates so-called [hop-by-hop headers](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers#hop-by-hop_headers) (such as `Content-Length`) when propagating by pattern.
+
+</Note>
 
 Alternatively, you can provide a static string via the `named` option. These `named` configurations have additional flexibility, because they support the following options:
 
@@ -219,10 +225,16 @@ headers:
 
 ### CORS settings
 
-> For a more general introduction to CORS and common considerations, see the following sections:
->
-> - [Why use CORS?](/apollo-server/security/cors#why-use-cors)
-> - [Choosing CORS options for your project](/apollo-server/security/cors#choosing-cors-options-for-your-project)
+<Tip>
+
+If your router serves exclusively _non_-browser-based clients, you probably don't need to modify the default CORS configuration.
+
+For a more general introduction to CORS and common considerations, see the following sections:
+
+- [Why use CORS?](/apollo-server/security/cors#why-use-cors)
+- [Choosing CORS options for your project](/apollo-server/security/cors#choosing-cors-options-for-your-project)
+
+</Tip>
 
 By default, the router enables _only_ GraphOS Studio to initiate browser connections to it. If your supergraph serves data to other browser-based applications, you need to do one of the following in the `cors` section of your **Router configuration YAML**:
 
@@ -265,15 +277,17 @@ cors:
   origins: []
 ```
 
-> If your router serves exclusively _non_-browser-based clients, you probably don't need to modify the default CORS configuration.
-
 #### Passing credentials
 
 If your router requires requests to [include a user's credentials](https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS#requests_with_credentials) (e.g., via cookies), you need to modify your CORS configuration to tell the browser those credentials are allowed.
 
 You can enable credentials with CORS by setting the [`Access-Control-Allow-Credentials`](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Access-Control-Allow-Credentials) HTTP header to `true`.
 
-> **Your router must specify individual `origins` to support credentialed requests.** If your router enables `allow_any_origin`, your browser will refuse to send credentials.
+<Note>
+
+**Your router must specify individual `origins` to support credentialed requests.** If your router enables `allow_any_origin`, your browser will refuse to send credentials.
+
+</Note>
 
 To allow browsers to pass credentials to your router, set `allow_credentials` to `true`, like so:
 
