--- a/src/content/graphos/basics/routing/self-hosted.mdx
+++ b/src/content/graphos/basics/routing/self-hosted.mdx
@@ -3,11 +3,19 @@ title: Self-hosted routing in GraphOS
 description: Host your supergraph's router in your own infrastructure
 ---
 
-> ⚠️ **Important:** If you're just getting started with GraphOS, instead [create a cloud supergraph](../quickstart/cloud/).
->
-> **Self-hosted supergraphs are an [Enterprise feature](/graphos/enterprise/)** for organizations with advanced performance or compliance requirements.
->
-> If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
+<EnterpriseFeature>
+
+**Self-hosted supergraphs are an [Enterprise feature](/graphos/enterprise/)** for organizations with advanced performance or compliance requirements.
+
+If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
+
+</EnterpriseFeature>
+
+<Tip>
+
+If you're just getting started with GraphOS, instead [create a cloud supergraph](../quickstart/cloud/).
+
+</Tip>
 
 Some organizations with advanced requirements need to host every part of their supergraph in their own infrastructure, _including_ the supergraph's router:
 
@@ -16,9 +24,9 @@ flowchart LR;
   clients(Clients);
   subgraph "Your infrastructure";
   router(["Router"]);
-  subgraphA[Locations<br/>subgraph];
-  subgraphB[Reviews<br/>subgraph];
-  router --- subgraphA & subgraphB;
+  serviceB[Subgraph A];
+  serviceC[Subgraph B];
+  router --- serviceB & serviceC;
   end;
   clients -.- router;
   class clients secondary;
