--- a/src/content/graphos/basics/routing/cloud-configuration.mdx
+++ b/src/content/graphos/basics/routing/cloud-configuration.mdx
@@ -51,7 +51,7 @@ headers:
 
 You can configure your router's behavior in the **Router configuration YAML** section of the **Cloud Router** tab.
 
-[Dedicated and Enterprise plans](../org/plans/) offer a [wide variety of configurations](/router/configuration/overview#yaml-config-file). On the [Serverless plan](../org/plans/), you can configure:
+On the [**Serverless** plan](../org/plans/), you can configure:
 
 - [HTTP headers](#http-header-rules) that the router sends to your subgraphs
 - [CORS rules](#cors-settings) for browser-based applications connecting to the router
@@ -59,9 +59,9 @@ You can configure your router's behavior in the **Router configuration YAML** se
 
 * [Introspection](#introspection) to allow resolving introspection queries.
 
-After you make any changes to your YAML configuration, you must **save** those changes (`CMD+S` or `CTRL+S`) for those changes to take effect.
-
 <Tip>
+
+[Dedicated and Enterprise plans](../org/plans/) offer a [wider variety of configurations](/router/configuration/overview#yaml-config-file).
 
 **If you require more advanced router customization,** please [reach out](https://www.apollographql.com/contact-sales/) to learn about your about Dedicated and Enterprise plan options.
 
