--- a/src/content/graphos/basics/routing/cloud.mdx
+++ b/src/content/graphos/basics/routing/cloud.mdx
@@ -43,6 +43,10 @@ When you first create your variant, the router provisioning process can take a f
   width="500"
 />
 
+## Configuring your router
+
+See [Configuring cloud routing](./cloud-configuration).
+
 ### Cloud launches
 
 Publishing a new subgraph schema or editing a cloud router's configuration triggers a new [launch](/graphos/delivery/launches/). Every launch automatically deploys new router instances for your supergraph.
@@ -52,10 +56,6 @@ Publishing a new subgraph schema or editing a cloud router's configuration trigg
 A router deployment might fail due to a platform incident or schema composition issues. To resolve this, try republishing your subgraph schema.
 
 </Note>
-
-## Configuring your router
-
-See [Configuring cloud routing](./cloud-configuration).
 
 ## Automatic deletion of unused routers
 
@@ -92,11 +92,11 @@ Apollo works with major public cloud providers to deliver GraphOS cloud routing.
 
 Cloud routing for Serverless plans is only available in Chicago, USA. Our infrastructure has interconnects with major public cloud providers, so latency is minimal. For example, latency between Chicago and AWS in Virginia is approximately 10ms. If there's a specific region you'd like us to support please [request a region](https://docs.google.com/forms/d/e/1FAIpQLSeLfIHulp-45VYzZspkOslFMzd1pPnMtVgIj_pVyJbox5DCKw/viewform).
 
-Cloud routing on the Dedicated plan has a wider variety of options. [Get in touch](mailto:cloud@apollographql.com) to learn more.
+Cloud routing on the [Dedicated](./cloud-dedicated) plan has a wider variety of options. [Get in touch](mailto:cloud@apollographql.com) to learn more.
 
 #### Can I choose my cloud router's region?
 
-Choice of region for cloud routers is only available on the Dedicated plan.
+Choice of region for cloud routers is only available on the [Dedicated](./cloud-dedicated) plan.
 
 #### Does GraphOS also host my individual subgraphs?
 
