Add SEO descriptions

--- a/src/content/graphos/basics/routing/cloud-configuration.mdx
+++ b/src/content/graphos/basics/routing/cloud-configuration.mdx
@@ -1,6 +1,7 @@
 ---
 title: Configuring cloud routing
-description: In GraphOS Studio
+subtitle: Learn how to configure cloud routers in GraphOS Studio
+description: Learn how to configure cloud routers and manage secrets in GraphOS Studio
 ---
 
 After you [create a cloud supergraph](../quickstart/cloud/), you can view and manage its router's configuration from GraphOS Studio. Go to the **Settings** page for your variant in Studio, then click the **Cloud Router** tab:
