--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice-troubleshooting.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice-troubleshooting.mdx
@@ -1,5 +1,7 @@
 ---
 title: AWS Lattice troubleshooting guide
+subtitle: Troubleshoot common issues and errors with AWS Lattice
+description: Troubleshoot common issues and errors with AWS Lattice and an Apollo Cloud Dedicated router
 ---
 
 <PreviewFeature>
