--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -1,5 +1,7 @@
 ---
 title: Securely communicate with subgraphs on your AWS VPC
+subtitle: Configure AWS VPC Lattice to communicate with your Cloud Dedicated router
+description: Configure AWS VPC Lattice to send and receive traffic to and from your Apollo Cloud Dedicated router
 ---
 
 <PreviewFeature>
