--- a/src/content/graphos/basics/routing/cloud.mdx
+++ b/src/content/graphos/basics/routing/cloud.mdx
@@ -1,6 +1,7 @@
 ---
 title: Cloud routing for supergraphs
-description: In GraphOS
+subtitle: Learn more about Apollo GraphOS-managed cloud routers
+description: Learn more about Apollo-managed cloud routers that sit in front of your GraphQL APIs.
 ---
 
 <Note>
