--- a/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
@@ -1,5 +1,7 @@
 ---
-title: Cloud Dedicated
+title: Cloud Dedicated overview
+subtitle: Learn about the Cloud Dedicated offering and pricing
+description: Learn about Apollo's dedicated cloud routing for GraphQL APIs
 ---
 
 <PreviewFeature>
