Update Quickstart title

--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -1,5 +1,5 @@
 ---
-title: Setting up a self-hosted supergraph
+title: Set up a self-hosted supergraph
 description: Host your supergraph in your own infrastructure
 ---
 
