--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -6,7 +6,11 @@ description: Host your supergraph in your own infrastructure
 This tutorial gets you up and running with GraphOS and a self-hosted supergraph, using the Apollo Router. While you can run the router regardless of your Apollo plan, connecting the router to GraphOS requires an [Enterprise plan](https://new.apollographql.com/pricing).
 If your organization doesn't currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
 
-> **Important:** This tutorial uses [Docker](https://www.docker.com/) for containerization of your supergraph's router.
+<Note>
+
+This tutorial uses [Docker](https://www.docker.com/) for containerization of your supergraph's router.
+
+</Note>
 
 ## Supergraph concepts
 
@@ -62,7 +66,11 @@ After you create your Apollo account, create your first graph in GraphOS Studio 
 
 **Rover** is Apollo's CLI for managing all kinds of graphs, including subgraphs and supergraphs. We'll use it throughout this quickstart.
 
-> Even if you already have Rover installed, you should update your version now by completing this step.
+<Note>
+
+Even if you already have Rover installed, you should update your version now by completing this step.
+
+</Note>
 
 Install the latest Rover release with the appropriate command for your system:
 
@@ -101,7 +109,11 @@ To run the Apollo Router locally, you need a way to build and run containers. He
 - [Rancher](https://rancherdesktop.io)
 - [Podman](https://podman.io)
 
-> This tutorial uses the `docker` command. Alternative commands usually look similar.
+<Note>
+
+This tutorial uses the `docker` command. Alternative commands usually look similar.
+
+</Note>
 
 Try building and running your router container:
 
@@ -322,7 +334,7 @@ To publish our subgraph schema, we'll first use Rover to **introspect** the runn
     --schema - <GRAPH_REF>
     ```
 
-    > You only need to provide a subgraph's `--routing-url` the _first_ time you publish that subgraph's schema to a particular variant (unless you need to change that URL later).
+    You only need to provide a subgraph's `--routing-url` the _first_ time you publish that subgraph's schema to a particular variant (unless you need to change that URL later).
 
     If you refresh the Schema page in Studio, you'll now see types and fields from the `reviews` subgraph as well.
 
@@ -332,7 +344,11 @@ Every time we publish a subgraph schema, GraphOS automatically composes _all_ of
 
 It's time to enable our router to fetch its supergraph schema from GraphOS. To do that, we need a **graph API key** that we set as the value of an environment variable.
 
-> We recommend that you create a separate API key for each system that communicates with GraphOS. This reduces the impact whenever you need to _replace_ an API key that might be compromised.
+<Tip>
+
+We recommend that you create a separate API key for each system that communicates with GraphOS. This reduces the impact whenever you need to _replace_ an API key that might be compromised.
+
+</Tip>
 
 1. Obtain a graph API key for your Studio graph by following these steps:
 
@@ -343,7 +359,11 @@ It's time to enable our router to fetch its supergraph schema from GraphOS. To d
     - If your router will use a [protected variant](../graphs/studio-features/#protected-variants-enterprise-only), choose **Graph Admin**.
     - Otherwise, choose **Contributor**.
 
-    > Make sure to copy and paste the API key's value somewhere so you can reference it (for security, API keys are not visible in Studio after creation).
+    <Tip>
+    
+    Make sure to copy and paste the API key's value somewhere so you can reference it. For security, API keys are not visible in Studio after creation.
+
+    </Tip>
 
 2. Create a file called `.env` in your Router project and paste in the following (replace `<API_KEY>` with your graph API key and `<GRAPH_REF>` with your graph ref):
 
@@ -352,7 +372,11 @@ It's time to enable our router to fetch its supergraph schema from GraphOS. To d
     APOLLO_GRAPH_REF=<GRAPH_REF>
     ```
 
-    > ⚠️ **API keys are secret credentials.** Never share them outside your organization or commit them to version control. Delete and replace API keys that you believe are compromised. Make sure always to add `.env` files to your `.gitignore` file (the router template project already does this).
+    <Caution>
+    
+    **API keys are secret credentials.** Never share them outside your organization or commit them to version control. Delete and replace API keys that you believe are compromised. Make sure always to add `.env` files to your `.gitignore` file. The router template project already does this.
+
+    </Caution>
 
 3. Paste this command into your terminal and run it:
 
@@ -377,7 +401,7 @@ It's time to enable our router to fetch its supergraph schema from GraphOS. To d
 
     </ExpansionPanel>
 
-    > By providing an API key to the router, you also automatically enable **operation metrics reporting** to GraphOS, enabling you visualize your graph's performance. [Learn more about metrics.](../metrics/)
+    By providing an API key to the router, you also automatically enable **operation metrics reporting** to GraphOS, enabling you visualize your graph's performance. [Learn more about metrics.](../metrics/)
 
 Now that our router is running, we can quickly open our browser to `localhost:4000` to explore our composed schema in Apollo Sandbox:
 
@@ -423,16 +447,22 @@ The exact details for deploying the router depend on which platform you use, but
       listen: 127.0.0.1:${env.PORT}
     ```
 
-    > Learn more about [router configuration options](/router/configuration/overview).
+    <Tip>
+    
+    Learn more about [router configuration options](/router/configuration/overview).
+
+    </Tip>
 
 After you successfully deploy your router, it's ready to start receiving client operations! If you have any existing client applications that connect _directly_ to your GraphQL API, you can update their GraphQL endpoint URL to your _router's_ URL.
 
 Similarly, any _new_ client applications should use your router's URL.
 
-> ⚠️ **Important considerations:**
->
-> - For browser-based clients, make sure their origin is allowed in your router's CORS rules, which you can set in the router's [YAML configuration file](/router/configuration/cors).
-> - Only update clients that communicate with the correct instance of your GraphQL API! For example, if your API has staging and production instances, only update clients that communicate with the instance used by this supergraph variant.
+<Note>
+
+- For browser-based clients, make sure their origin is allowed in your router's CORS rules, which you can set in the router's [YAML configuration file](/router/configuration/cors).
+- Only update clients that communicate with the correct instance of your GraphQL API! For example, if your API has staging and production instances, only update clients that communicate with the instance used by this supergraph variant.
+
+</Note>
 
 ## Next steps
 
