--- a/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
@@ -10,11 +10,13 @@ Cloud Dedicated is currently in invite-only [preview](#private-preview). Don't h
 
 </PreviewFeature>
 
-**Cloud Dedicated** is the Apollo offering that lets you run a cloud router on dedicated, pre-provisioned infrastructure that you control and scale. It gives you access to a fully managed and monitored fleet of Apollo Routers. This approach lets you implement and scale your supergraph without managing any additional infrastructure. Tailored for teams handling production-grade workloads, Cloud Dedicated offers additional control over performance and security.
+GraphOS **Cloud Dedicated** is the Apollo offering that lets you run a cloud router on dedicated, pre-provisioned infrastructure that you control and scale. It gives you access to a fully managed and monitored fleet of Apollo Routers. This approach lets you implement and scale your supergraph without managing any additional infrastructure. Tailored for teams handling production-grade workloads, Cloud Dedicated offers additional control over performance and security.
 
 ## Private preview
 
-GraphOS Cloud Dedicated is a new product and is in [preview](/resources/product-launch-stages/#preview) while it matures. Cloud Dedicated is more performant and reliable that GraphOS Cloud Serverless; however, you should load-test and evaluate the platform before migrating any production workloads.
+Cloud Dedicated is a new product and is in [preview](/resources/product-launch-stages/#preview) while it matures. Cloud Dedicated is more performant and reliable that GraphOS Cloud Serverless; however, you should load-test and evaluate the platform before migrating any production workloads.
+
+### Preview limitations
 
 While in preview, Dedicated has the following limitations:
 
